--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.4",
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
+    "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
     "mdb-angular-calendar": "file:mdb-angular-calendar-2.0.0.tgz",
@@ -42,7 +43,7 @@
     "@angular/compiler-cli": "~13.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.14",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.8.0",
     "json-server": "^0.17.0",
     "karma": "~6.3.0",
