--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-2.2.0.tgz",
     "mdb-angular-vector-maps": "file:mdb-angular-vector-maps-2.0.0.tgz",
     "mdb-angular-wysiwyg": "file:mdb-angular-wysiwyg-2.0.0.tgz",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~7.5.0",
+    "slugify": "^1.6.5",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
