--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "mdb-angular-calendar": "file:mdb-angular-calendar-2.0.0.tgz",
     "mdb-angular-cookies-management": "file:mdb-angular-cookies-management-2.0.0.tgz",
     "mdb-angular-drag-and-drop": "file:mdb-angular-drag-and-drop-2.0.0.tgz",
