--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
     "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.1",
     "mdb-angular-calendar": "file:mdb-angular-calendar-2.0.0.tgz",
     "mdb-angular-cookies-management": "file:mdb-angular-cookies-management-2.0.0.tgz",
     "mdb-angular-drag-and-drop": "file:mdb-angular-drag-and-drop-2.0.0.tgz",
@@ -36,6 +37,7 @@
     "mdb-angular-wysiwyg": "file:mdb-angular-wysiwyg-2.0.0.tgz",
     "ngx-skeleton-loader": "^5.0.0",
     "ngx-toastr": "^13.2.1",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "slugify": "^1.6.5",
     "tslib": "^2.1.0",
